# django-model-info

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  README.md  example-output.html  example-output.md  manage.py  noxfile.py  out.html  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  runtests.py  setup.cfg  setup.py  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
django_model_info/: apps.py  urls.py
django_model_info/management/commands/: _field_attr_utils.py  _info_classes.py  _method_attr_utils.py  _model_attr_utils.py  model_info.py
docs/: conf.py  contributing.md  getting_started.md  index.md  index.rst  installation.rst  migrationgraph.md  model_filters.md  model_graph.md  model_info.md  modelfilters.md  modelgraph.md  modelinfo.md  reference.md  requirements.txt  terminology.md  usage.md  usage.rst
example_outputs/: modelfilters.html  modelfilters.md  modelgraph.dot  modelinfo.html  modelinfo.md
example_project/: settings.py  test_field_utils.py  test_manager_utils.py  test_method_attr_utils.py  test_migrationgraph.py  test_model_attr_utils.py  test_modelfilters.py  test_modelgraph.py  test_modelinfo.py  test_models.py  urls.py  wsgi.py
example_project/analytics/: models.py
example_project/analytics/migrations/: 0001_initial.py
example_project/common/: models.py
example_project/common/migrations/: 0001_initial.py
example_project/fixtures/: data.json
example_project/inventory/: models.py
example_project/inventory/migrations/: 0001_initial.py
example_project/sales/: models.py
example_project/sales/migrations/: 0001_initial.py
src/: __init__.py
src/django_model_info/: apps.py  urls.py
src/django_model_info/management/commands/: _info_classes.py  _method_attr_utils.py  _model_attr_utils.py  migrationgraph.py  model_filters.py  model_graph.py  model_info.py  modelfilters.py  modelgraph.py  modelinfo.py
src/django_model_info/management/commands/common_utils/: _cache.py  _settings.py
src/django_model_info/management/commands/model_filters_utils/: _field_utils.py
src/django_model_info/management/commands/model_info_utils/: _common_utils.py  _field_attr_utils.py  _info_classes.py  _manager_utils.py  _markdown_utils.py
src/django_model_info/management/commands/modelfilters_utils/: _field_utils.py
src/django_model_info/management/commands/modelgraph_utils/: __init__.py  _analysis.py  _base.py  _dot.py  _graph.py  _mermaidjs.py
src/django_model_info/management/commands/modelinfo_utils/: _common_utils.py  _manager_utils.py  _markdown_utils.py  _method_attr_utils.py
tests/: README.md  settings.py  test_models.py  urls.py
tests/example/: models.py  urls.py
