[build-system]
requires = ["setuptools>=75.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django-model-info"
version = "2026.3.1"
description = "A set of Django Management Commands to help you understand and visualize your project's models."
authors = [{ name = "Jack Linke", email = "jacklinke@gmail.com" }]
license = "MIT"
readme = "README.md"
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = ["django>=4.2", "networkx>=3.4.2", "pydot>=3.0.2", "rich>=13"]

[project.urls]
Homepage = "https://github.com/OmenApps/django-model-info"
Repository = "https://github.com/OmenApps/django-model-info"
Documentation = "https://django-model-info.readthedocs.io/en/latest/"
Changelog = "https://github.com/OmenApps/django-model-info/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["django_model_info"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "example_project.settings"
pythonpath = ["."]
python_files = ["test_*.py"]
log_cli = true
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
branch = true
source_pkgs = ["django_model_info"]

[tool.coverage.report]
show_missing = true
omit = [
    ".nox/*",
    "*/migrations/*",
    "*/__init__.py",
]
exclude_lines = [
    "raise NotImplementedError",
]

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

[dependency-groups]
dev = [
    "bandit",
    "coverage[toml]",
    "nox",
    "pip-audit",
    "pre-commit",
    "pre-commit-hooks",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-timeout",
    "pyupgrade",
    "ruff",
]
